Point SystemUI Dialog theme to DeviceDefault
Bug: 373411487
Test: Manual
Flag: EXEMPT resource only change

Change-Id: I7d4024a5563e402df3df5d0073b76c1afc27c3a0

--- a/car_product/rro/CarSystemUIRRO/res/values/styles.xml
+++ b/car_product/rro/CarSystemUIRRO/res/values/styles.xml
@@ -23,4 +23,6 @@
         <item name="*android:dotColor">@color/car_secondary_container</item>
     </style>
 
+    <style name="Theme.SystemUI.Dialog" parent="android:Theme.DeviceDefault.Dialog"/>
+
 </resources>
