--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_activity.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_activity.xml
@@ -17,9 +17,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/control_bar_background"
-    android:gravity="bottom"
+    android:gravity="top"
     android:id="@+id/control_bar_area"
-    android:layout_gravity="bottom"
+    android:layout_gravity="top"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:orientation="vertical"
