Add controllers to MUMD system bar buttons
Bug: 378698664
Test: manual (launch MUMD, test system bar button functionality)
Flag: NONE bugfix
Change-Id: Ie665c04559e56b6cfdf10c69224458e3598e3405

--- a/car_product/rro/CarSystemUIPassengerRRO/res/layout/car_passenger_bottom_system_bar.xml
+++ b/car_product/rro/CarSystemUIPassengerRRO/res/layout/car_passenger_bottom_system_bar.xml
@@ -37,7 +37,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            systemui:hvacAreaId="68">
+            systemui:hvacAreaId="68"
+            systemui:controller="com.android.systemui.car.hvac.TemperatureControlViewController">
             <include layout="@layout/adjustable_temperature_view"/>
         </com.android.systemui.car.hvac.TemperatureControlView>
 
@@ -81,7 +82,9 @@
                 style="@style/SystemBarButton"
                 android:layout_marginEnd="0dp"
                 systemui:highlightWhenSelected="true"
-                systemui:icon="@drawable/car_ic_notification"/>
+                systemui:icon="@drawable/car_ic_notification"
+                systemui:systemBarDisableFlags="notificationIcons"
+                systemui:controller="com.android.systemui.car.notification.NotificationButtonController"/>
 
             <Space
                 android:layout_width="0dp"
