Dynamic rows and columns based available space
 - Removes old overlays for static rows and cols.
 - Adds minimum required width and height of the item.
 - With this overlaid width and height the rows x cols
   are configured as 5 x 4

Bug: 374778087
Test: Manual
Flag: EXEMPT bugfix

Change-Id: I92d5468b811732e030566f6680591dfefccd5a31

--- a/car_product/car_ui_portrait/rro/CarUiPortraitAppGridReferenceRRO/res/values/dimens.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitAppGridReferenceRRO/res/values/dimens.xml
@@ -19,6 +19,8 @@
     <dimen name="recent_apps_row_height">2dp</dimen>
     <dimen name="app_grid_width">1224dp</dimen>
     <dimen name="app_grid_height">1154dp</dimen>
+    <dimen name="car_app_selector_column_min_width">250dp</dimen>
+    <dimen name="car_app_selector_column_min_height">165dp</dimen>
     <dimen name="app_grid_row_margin">57dp</dimen>
     <dimen name="app_grid_row_margin_vertical">46dp</dimen>
     <dimen name="app_grid_touch_target_size">104dp</dimen>
