--- a/car_product/car_ui_portrait/rro/android/res/layout-car/car_alert_dialog_title.xml
+++ b/car_product/car_ui_portrait/rro/android/res/layout-car/car_alert_dialog_title.xml
@@ -34,8 +34,8 @@
             android:id="@android:id/icon"
             android:layout_width="@dimen/car_alert_dialog_icon_size"
             android:layout_height="@dimen/car_alert_dialog_icon_size"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/car_alert_dialog_padding"
             android:scaleType="fitCenter"
             android:src="@null" />
@@ -44,9 +44,9 @@
             android:id="@*android:id/alertTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/icon"
+            android:layout_below="@android:id/icon"
             android:textAlignment="center"
-            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
             style="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"/>
     </RelativeLayout>
     <Space
