Fix top system bar and nav bar mirroring in RTL
Fixes: 378602962
Fixes: 378602935
Test: manual
Flag: EXEMPT bugfix
Change-Id: I9b59af0edcb53af208a7784a41b963bb2274087b

--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_bottom_system_bar.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_bottom_system_bar.xml
@@ -28,7 +28,8 @@
         android:id="@+id/nav_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layoutDirection="ltr">
 
         <com.android.systemui.car.hvac.CarUiPortraitTemperatureControlView
             android:id="@+id/driver_hvac"
