--- a/car_product/rro/overlay-visual/androidRRO/res/layout-car/car_alert_dialog_button_bar.xml
+++ b/car_product/rro/overlay-visual/androidRRO/res/layout-car/car_alert_dialog_button_bar.xml
@@ -14,20 +14,21 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@*android:id/buttonPanel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbarAlwaysDrawVerticalTrack="true"
-            android:scrollIndicators="none"
-            android:fillViewport="true"
-            style="?android:attr/buttonBarStyle">
+    android:id="@*android:id/buttonPanel"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
+    android:scrollbarAlwaysDrawVerticalTrack="true"
+    android:scrollIndicators="none"
+    android:fillViewport="true"
+    style="?android:attr/buttonBarStyle">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center">
+        android:paddingTop="@dimen/car_alert_dialog_button_spacing"
+        style="?android:attr/buttonBarStyle">
         <Button
             android:id="@android:id/button3"
             android:layout_width="match_parent"
