Support toggle on control bar
- ControlBarActivity now receives broadcast from system UI to know if
  the application panel is open and the top task in application panel
- ControlBarActivity requests sytemUI to close the application panel
  when
  - Top task is media or dialer
  - application panel is open
  - receives media or incall intent

Flag: EXEMPT refactor
Bug: 379773628
Test: manual
Change-Id: Ifb065a65000a487c7582b2a842c52ea07a7b772c

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_activity.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_activity.xml
@@ -19,7 +19,7 @@
     android:background="@drawable/control_bar_background"
     android:gravity="top"
     android:id="@+id/control_bar_area"
-    android:layout_gravity="top"
+    android:layout_gravity="bottom"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:orientation="vertical"
