--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/config.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/config.xml
@@ -30,6 +30,10 @@
         com.android.car.dialer/com.android.car.dialer.ui.activecall.InCallActivity
     </string>
 
+    <string name="config_mediaActivity" translatable="false">
+        com.android.car.media/.MediaActivity
+    </string>
+
     <string-array name="config_ignoreOpeningForegroundDA" translatable="false">
         <item>android.car.usb.handler/android.car.usb.handler.UsbHostManagementActivity</item>
         <item>com.android.car.portraitlauncher/.homeactivities.CarUiPortraitHomeScreen</item>
