--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/styles.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/styles.xml
@@ -46,4 +46,7 @@
     <style name="ControlBarOverflowExitButtonStyle" parent="ControlBarCustomActionStyle">
         <item name="android:tint">@color/car_surface_container_highest</item>
     </style>
+    <style name="ControlBarActivityTheme" parent="Theme.CarUi.NoToolbar">
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 </resources>
