--- a/car_product/rro/CarSystemUIPassengerRRO/res/layout/car_passenger_bottom_system_bar.xml
+++ b/car_product/rro/CarSystemUIPassengerRRO/res/layout/car_passenger_bottom_system_bar.xml
@@ -74,7 +74,8 @@
                 systemui:highlightWhenSelected="true"
                 systemui:icon="@drawable/car_ic_control_center"
                 systemui:intent="intent:#Intent;action=android.intent.action.MAIN;package=com.android.car.multidisplay.controlcenter;component=com.android.car.multidisplay.controlcenter/.ControlCenterActivity;B.BOTTOM_BAR_LAUNCH=true;end"
-                systemui:componentNames="com.android.car.multidisplay.controlcenter/.ControlCenterActivity"/>
+                systemui:componentNames="com.android.car.multidisplay.controlcenter/.ControlCenterActivity"
+                systemui:controller="com.android.systemui.car.systembar.ControlCenterButtonController"/>
 
             <com.android.systemui.car.systembar.CarSystemBarButton
                 android:id="@+id/notifications"
