--- a/tests/CarEvsMultiCameraPreviewApp/res/layout/evs_preview_activity.xml
+++ b/tests/CarEvsMultiCameraPreviewApp/res/layout/evs_preview_activity.xml
@@ -12,6 +12,7 @@
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/evs_preview_container"
+              android:fitsSystemWindows="true"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:weightSum="15"
