--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/values/dimens.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/values/dimens.xml
@@ -130,4 +130,30 @@
     <dimen name="data_subscription_pop_up_arrow_offset">116dp</dimen>
 
     <dimen name="qc_row_bottom_divider_margin_top">0dp</dimen>
+
+    <!-- DisplayArea dimens-->
+
+    <!-- screen height of the device. This is used when custom policy is provided using
+    config_deviceSpecificDisplayAreaPolicyProvider -->
+    <dimen name="total_screen_height">2194dp</dimen>
+    <!-- screen width of the device. This is used when custom policy is provided using
+    config_deviceSpecificDisplayAreaPolicyProvider -->
+    <dimen name="total_screen_width">1234dp</dimen>
+    <dimen name="control_bar_height">408dp</dimen>
+    <dimen name="control_bar_padding">0dp</dimen>
+    <dimen name="full_app_display_area_height">1760dp</dimen>
+    <dimen name="control_bar_image_background_radius">24dp</dimen>
+    <dimen name="default_app_display_area_height">856dp</dimen>
+
+    <dimen name="title_bar_display_area_height">470dp</dimen>
+    <dimen name="title_bar_container_height">@*android:dimen/status_bar_height</dimen>
+    <dimen name="title_bar_height">56dp</dimen>
+    <!-- This value is 500dp + (top of title bar)  -->
+    <dimen name="title_bar_display_area_touch_drag_threshold">1204dp</dimen>
+
+    <dimen name="corner_radius">48dp</dimen>
+    <dimen name="car_panel_border_width">3dp</dimen>
+    <dimen name="grip_bar_height">6dp</dimen>
+    <dimen name="grip_bar_width">160dp</dimen>
+    <!-- DisplayArea dimens end-->
 </resources>
