--- a/car_product/car_ui_portrait/rro/android/res/values/config.xml
+++ b/car_product/car_ui_portrait/rro/android/res/values/config.xml
@@ -59,4 +59,9 @@
 
     <!-- Whether vertical reachability repositioning is allowed for letterboxed fullscreen apps. -->
     <bool name="config_letterboxIsVerticalReachabilityEnabled">true</bool>
+
+    <!-- Class name of the device specific implementation of DisplayAreaPolicy.Provider or empty if the default should be used. -->
+    <string translatable="false" name="config_deviceSpecificDisplayAreaPolicyProvider">
+        com.android.server.wm.CarDisplayAreaPolicyProvider
+    </string>
 </resources>
