Add textColorAlertDialogListItem to themes_device_defaults
Bug: 380312881
Test: Manual
Flag: EXEMPT resource only change

Change-Id: I74344ac471d4eaffc453e262a9ecc67fe597f205

--- a/car_product/car_ui_portrait/rro/android/res/values/themes_device_defaults.xml
+++ b/car_product/car_ui_portrait/rro/android/res/values/themes_device_defaults.xml
@@ -69,6 +69,7 @@
         <item name="android:textColorSecondaryInverse">@color/car_on_secondary</item>
         <item name="android:textColorTertiary">@color/car_secondary</item>
         <item name="android:textColorTertiaryInverse">@color/car_on_secondary</item>
+        <item name="android:textColorAlertDialogListItem">@color/car_on_background</item>
         <item name="android:textAppearanceLarge">@*android:style/TextAppearance.DeviceDefault.Large</item>
         <item name="android:textAppearanceMedium">@*android:style/TextAppearance.DeviceDefault.Medium</item>
         <item name="android:textAppearanceSmall">@*android:style/TextAppearance.DeviceDefault.Small</item>
@@ -122,6 +123,7 @@
         <item name="android:textColorPrimaryDisableOnly">@color/car_on_background</item>
         <item name="android:textColorSecondary">@color/car_alert_dialog_message_text_color</item>
         <item name="android:textColorTertiary">@color/car_alert_dialog_message_text_color</item>
+        <item name="android:textColorAlertDialogListItem">@color/car_alert_dialog_message_text_color</item>
 
         <item name="android:windowBackground">@android:color/transparent</item>
 
