Add text clarifying SSID case sensitivity
Note to users that SSIDs are case sensitive.

Flag: TEST_ONLY
Bug: 189157441
Test: open NetworkPreferenceApp, visually inspect
Change-Id: I69202a2b5dd7a90608bbc989dfefb9cb9b936222

--- a/tests/NetworkPreferenceApp/res/layout/manager.xml
+++ b/tests/NetworkPreferenceApp/res/layout/manager.xml
@@ -190,6 +190,17 @@
                 android:weightSum="5"
                 android:orientation="vertical">
                 <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:weightSum="2"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ssid_case_sensitive_text"/>
+                </LinearLayout>
+                <LinearLayout
                     style="@style/SectionContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
