--- a/tests/CustomizationTool/res/layout/main_layout.xml
+++ b/tests/CustomizationTool/res/layout/main_layout.xml
@@ -32,6 +32,8 @@
         android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scrollbars="horizontal"
+        android:fadeScrollbars="false"
         android:layout_marginTop="10dp" />
 
     <LinearLayout
@@ -54,6 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:scrollbars="vertical"
+            android:fadeScrollbars="false"
             android:layout_marginHorizontal="25dp" />
     </LinearLayout>
 
