Update aspect ratio icons for RB
Bug: 381284674
Test: Manual
Flag: EXEMPT minor_ui_change
Change-Id: I773630e116423a5f75e554fb820063f221e9bef8

--- a/car_product/car_ui_portrait/rro/CarUiPortraitSettingsRRO/res/values/colors.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitSettingsRRO/res/values/colors.xml
@@ -16,4 +16,6 @@
   -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <color name="qc_default_icon_color">@color/car_on_surface_variant</color>
+    <color name="aspect_ratio_icon_outline_color">@color/car_on_background</color>
+    <color name="aspect_ratio_icon_background_color">@color/car_background</color>
 </resources>
