--- a/car_product/car_ui_portrait/rro/CarUiPortraitSettingsRRO/res/xml/overlays.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitSettingsRRO/res/xml/overlays.xml
@@ -28,6 +28,8 @@
 
     <item target="color/icon_color_default" value="@color/top_level_icon_default"/>
     <item target="color/qc_default_icon_color" value="@color/qc_default_icon_color"/>
+    <item target="color/aspect_ratio_icon_outline_color" value="@color/aspect_ratio_icon_outline_color"/>
+    <item target="color/aspect_ratio_icon_background_color" value="@color/aspect_ratio_icon_background_color"/>
     <item target="color/top_level_injected_default_background" value="@android:color/transparent" />
     <item target="color/top_level_icon_default" value="@color/top_level_icon_default"/>
     <item target="color/top_level_accessibility_background" value="@color/top_level_icon_background"/>
