--- a/car_product/dewd/rro/CarSystemUIDewdUIRRO/res/xml/app_panel.xml
+++ b/car_product/dewd/rro/CarSystemUIDewdUIRRO/res/xml/app_panel.xml
@@ -34,11 +34,9 @@
     </Variant>
 
     <Transitions>
-        <Transition onEvent="home_event" toVariant="@id/closed"/>
-        <Transition onEvent="home_2_event" toVariant="@id/closed"/>
-        <Transition onEvent="open_app_drawer_event" toVariant="@id/opened"/>
-        <Transition onEvent="close_app_drawer_event" toVariant="@id/closed"/>
-        <Transition onEvent="enter_immersive_event" toVariant="@id/immersive"/>
-        <Transition onEvent="exit_immersive_event" toVariant="@id/opened"/>
+        <Transition onEvent="_System_TaskOpenEvent" onEventTokens="panelId=panel_app_grid" toVariant="@id/closed"/>
+        <Transition onEvent="_System_TaskOpenEvent" onEventTokens="panelId=app_panel" toVariant="@id/opened"/>
+        <Transition onEvent="_System_OnHomeEvent" toVariant="@id/closed"/>
+        <Transition onEvent="_System_EnterSuwEvent" toVariant="@id/immersive"/>
     </Transitions>
 </Panel>
