Added config to inform if Auto Task Stack is used
Flag: com.android.wm.shell.enable_auto_task_stack_controller

Bug: 392757141
Test: make
(cherry picked from https://googleplex-android-review.googlesource.com/q/commit:489b3fffacdd125c875cec8400807a4a87b3eb63)

Change-Id: I2b5747d6c69ee78c9ddce5081a8839e422d80f9b
Merged-In: I2b5747d6c69ee78c9ddce5081a8839e422d80f9b

--- a/service/res/values/config.xml
+++ b/service/res/values/config.xml
@@ -668,4 +668,9 @@
 
     <!-- Controls the use of bluetooth pairing when long pressing the voice assist button in CarInputService. -->
     <bool name="config_enableLongPressBluetoothPairing">true</bool>
+
+    <!-- Auto task stack is the new functionality added as part of the Car-WindowManager-Shell
+         library. SystemUI can use this library for windowing. CarService makes some internal
+         changes if Auto Task Stack is used. Set it to true if Auto Task is used. -->
+    <bool name="config_isUsingAutoTaskStackWindowing">false</bool>
 </resources>
